--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,8 +17,6 @@ jobs:
           # Your GitHub token
           # The following scopes are required:
           #  - public_access (default scope)
-          #  - public_repo
-          #  - read:project
           # The following additional scopes may be required:
           #  - read:org      (for organization related metrics)
           #  - read:user     (for user related data)
@@ -31,16 +29,22 @@ jobs:
           template: classic
           base: header, activity, community, repositories, metadata
           base_hireable: yes
-          config_display: columns
-          config_octicon: yes
           config_timezone: Asia/Katmandu
-          config_twemoji: yes
           plugin_achievements: yes
           plugin_achievements_display: compact
           plugin_achievements_secrets: yes
-          plugin_achievements_threshold: C
-          plugin_calendar: yes
-          plugin_calendar_limit: 1
+          plugin_achievements_threshold: B
+          plugin_activity: yes
+          plugin_activity_days: 14
+          plugin_activity_filter: all
+          plugin_activity_limit: 5
+          plugin_activity_load: 300
+          plugin_activity_visibility: all
+          plugin_code: yes
+          plugin_code_days: 3
+          plugin_code_lines: 12
+          plugin_code_load: 400
+          plugin_code_visibility: public
           plugin_fortune: yes
           plugin_habits: yes
           plugin_habits_charts_type: classic
@@ -51,18 +55,46 @@ jobs:
           plugin_habits_languages_threshold: 0%
           plugin_introduction: yes
           plugin_introduction_title: yes
+          plugin_isocalendar: yes
+          plugin_isocalendar_duration: half-year
+          plugin_languages: yes
+          plugin_languages_aliases: javascript:JS
+          plugin_languages_analysis_timeout: 15
+          plugin_languages_analysis_timeout_repositories: 7.5
+          plugin_languages_categories: markup, programming
+          plugin_languages_colors: github
+          plugin_languages_ignored: html, css
+          plugin_languages_limit: 8
+          plugin_languages_recent_categories: markup, programming
+          plugin_languages_recent_days: 14
+          plugin_languages_recent_load: 300
+          plugin_languages_sections: most-used
+          plugin_languages_threshold: 0%
+          plugin_lines: yes
+          plugin_lines_history_limit: 1
+          plugin_lines_repositories_limit: 4
+          plugin_lines_sections: base
           plugin_music: yes
           plugin_music_limit: 4
-          plugin_music_mode: recent
+          plugin_music_mode: playlist
           plugin_music_played_at: yes
-          plugin_music_playlist: https://www.youtube.com/watch?v=tqxRidAWER8&list=PLQRQJ1vj29EZdJdf86XNzRQffk7lXhQQI
+          plugin_music_playlist: https://music.youtube.com/playlist?list=PLQRQJ1vj29EZdJdf86XNzRQffk7lXhQQI&si=c4R85EATXpN0BhHs
           plugin_music_provider: youtube
           plugin_music_time_range: short
           plugin_music_top_type: tracks
-          plugin_music_user: TaylorSwift
-          plugin_projects: yes
-          plugin_projects_limit: 4
-          plugin_stargazers: yes
-          plugin_stargazers_charts: yes
-          plugin_stargazers_charts_type: chartist
-          plugin_stargazers_days: 999999
+          plugin_music_user: UCkzCCnvI2NalpwsAjKuFDtw
+          plugin_nightscout: yes
+          plugin_nightscout_datapoints: 12
+          plugin_nightscout_highalert: 180
+          plugin_nightscout_lowalert: 80
+          plugin_nightscout_urgenthighalert: 250
+          plugin_nightscout_urgentlowalert: 50
+          plugin_nightscout_url: https://example.herokuapp.com
+          plugin_people: yes
+          plugin_people_limit: 10
+          plugin_people_size: 28
+          plugin_people_thanks: prof-gautam
+          plugin_people_types: followers, following
+          plugin_rss: yes
+          plugin_rss_limit: 4
+          plugin_rss_source: https://news.ycombinator.com/
