Add permissions section to music activity workflow

--- a/.github/workflows/music-activity.yml
+++ b/.github/workflows/music-activity.yml
@@ -5,6 +5,9 @@ on:
     - cron: "*/20 * * * *" 
   workflow_dispatch: 
 
+permissions:
+  contents: write
+
 jobs:
   update-readme:
     name: Update README with YouTube Music activity
