--- a/.github/workflows/music-activity.yml
+++ b/.github/workflows/music-activity.yml
@@ -14,6 +14,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0  
       
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -23,19 +25,21 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install requests
+          pip install requests pytz
           
       - name: Update README with music activity
         env:
           LASTFM_API_KEY: ${{ secrets.LASTFM_API_KEY }}
           LASTFM_USERNAME: ${{ secrets.LASTFM_USERNAME }}
+          DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
         run: python .github/scripts/update_music.py
+        continue-on-error: false  
         
       - name: Commit and push if changed
         run: |
           git diff
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git config --global user.name "GitHub Actions"
-          git add .
-          git commit -m "Update README with YouTube Music activity" -a || echo "No changes to commit"
+          git add README.md  # Be more specific about what file to add
+          git commit -m "Update README with YouTube Music activity" || echo "No changes to commit"
           git push
